<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/sing_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_field"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_server_login"
        android:inputType="text"
        android:paddingStart="5sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_field"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_server_adres"
        android:inputType="text"
        android:paddingStart="5sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_field"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_server_pass"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/button"
        android:layout_width="260sp"
        android:layout_height="50sp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:text="@string/button_text_singin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_field"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_server_port"
        android:inputType="number"
        android:paddingStart="5sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/save_data"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="172dp"
        android:layout_height="183dp"
        android:layout_marginTop="250dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>