<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    tools:context=".FileUse">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textFontWeight="1000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260sp"
        android:layout_height="60sp"
        android:layout_marginTop="150dp"
        android:text="@string/chose_file"
        android:textSize="30sp"
        android:background="@drawable/button_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260sp"
        android:layout_height="60sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_download"
        android:text="@string/upload"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="left"
        android:visibility="invisible"
        android:paddingStart="20sp"
        android:text="@string/enter_ffile"
        android:textColor="@color/red"
        android:textFontWeight="1000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="135dp"
        android:layout_height="126dp"
        android:layout_marginTop="150dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="260sp"
        android:layout_height="60sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_download_slyte_second"
        android:text="@string/download"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="left"
        android:text="@string/name"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textFontWeight="1000"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/text_field"
        android:contentDescription="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>